buildscript {
    repositories {
        maven { url = 'https://files.minecraftforge.net/maven' }
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        maven { url = 'https://maven.parchmentmc.org' }
        jcenter()
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
        classpath 'org.parchmentmc:librarian:1.+'
    }
}
apply plugin: 'net.minecraftforge.gradle'

apply plugin: 'org.parchmentmc.librarian.forgegradle'
apply plugin: 'org.spongepowered.mixin'
apply plugin: 'eclipse'
apply plugin: 'maven-publish'
apply from: 'https://raw.githubusercontent.com/SizableShrimp/Forge-Class-Remapper/main/classremapper.gradle'

version = "${mod_version}-mc${mc_version}"
group = 'insane96mcp.enhancedai'
archivesBaseName = 'EnhancedAI'

java.toolchain.languageVersion = JavaLanguageVersion.of(17) // Mojang ships Java 8 to end users, so your mod should target Java 8.

minecraft {
    mappings channel: 'official', version: "${mc_version}"
    
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'

            property 'forge.logging.console.level', 'debug'
            arg "-mixin.config=enhancedai.mixins.json"

            mods {
                enhancedai {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            arg "-mixin.config=enhancedai.mixins.json"

            property 'forge.logging.console.level', 'debug'

            mods {
                enhancedai {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'

            property 'forge.logging.console.level', 'debug'

            args '--mod', 'enhancedai', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')

            mods {
                enhancedai {
                    source sourceSets.main
                }
            }
        }
    }
}

repositories {
    flatDir {
        dirs "libs"
    }
    maven { url "https://www.cursemaven.com" }
}

mixin {
    add sourceSets.main, "enhancedai.refmap.json"
}

dependencies {
    
    minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"

    implementation fg.deobf("blank:InsaneLib:${lib_version}-mc${mc_version}")
    
    annotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"

    //implementation fg.deobf("curse.maven:savage-and-ravage-381736:3226442")
    //implementation fg.deobf("curse.maven:abnormals_core-382216:3457851")

}

jar {
    manifest {
        attributes([
            "Specification-Title": "enhancedai",
            "Specification-Vendor": "insane96mcp",
            "Specification-Version": "1", // We are version 1 of ourselves
            "Implementation-Title": project.name,
            "Implementation-Version": "${mod_version}",
            "Implementation-Vendor" :"insane96mcp",
            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
            "MixinConfigs": "enhancedai.mixins.json"
        ])
    }
}

jar.finalizedBy('reobfJar') 

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file:///${project.projectDir}/mcmodsrepo"
        }
    }
}
